Made Valo test UI deterministic and added TB test
Change-Id: I342fad836ad0d4014748a06c8ccfed53a99e6ece