@@ -11,6 +11,7 @@
     <property name="module.name" value="vaadin-uitest" />
     <property name="uitest.dir" location="${vaadin.basedir}/uitest" />
     <property name="result.dir" value="result" />
+    <property name="theme.result.dir" value="${result.dir}/VAADIN/themes" />
     <property name="result.war" location="${result.dir}/lib/${module.name}-${vaadin.version}.war" />
 
     <path id="classpath.compile.custom">
@@ -91,7 +92,7 @@
 
     </target>
 
-    <target name="war" depends="dependencies, compile, testing-widgetset">
+    <target name="war" depends="dependencies, compile, compile-test-themes, testing-widgetset">
         <property name="result.dir" location="result" />
         <property name="classes" location="${result.dir}/classes" />
         <property name="WebContent.dir" location="${vaadin.basedir}/WebContent" />
@@ -121,10 +122,13 @@
             <fileset refid="common.files.for.all.jars" />
             <fileset dir="${result.dir}">
                 <include name="VAADIN/widgetsets/**/*" />
+                <include name="VAADIN/themes/tests-valo*/**" />
             </fileset>
             <fileset dir="${WebContent.dir}">
                 <include name="statictestfiles/**" />
                 <include name="VAADIN/themes/tests-*/**" />
+                <!-- Scss themes compiled and included above -->
+                <exclude name="VAADIN/themes/tests-valo*/**" />
                 <include name="VAADIN/themes/reindeer-tests/**" />
                 <include name="VAADIN/jquery.atmosphere.js" />
                 <include name="WEB-INF/*.xml" />
@@ -192,43 +196,43 @@
     </target>
 
     <target name="test-server" depends="clean-testbench-errors">
-       <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
-       <parallel>
-         <daemons>
-           <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
-         </daemons>
-         <sequential>
-           <ant antfile="${uitest.dir}/integration_tests.xml" target="integration-test-all" inheritall="false" inheritrefs="false">
-             <property name="demo.war" value="${war.file}" />
-           </ant>
-         </sequential>
-       </parallel>
+        <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
+        <parallel>
+            <daemons>
+                <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
+            </daemons>
+            <sequential>
+                <ant antfile="${uitest.dir}/integration_tests.xml" target="integration-test-all" inheritall="false" inheritrefs="false">
+                    <property name="demo.war" value="${war.file}" />
+                </ant>
+            </sequential>
+        </parallel>
     </target>
 
     <target name="test-tb2" depends="clean-testbench-errors">
-       <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
-       <parallel>
-         <daemons>
-           <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
-         </daemons>
-         <sequential>
-           <ant antfile="${uitest.dir}/vaadin-server.xml" target="wait-for-startup" />
-           <ant antfile="${uitest.dir}/test.xml" target="tb2-tests" />
-         </sequential>
-       </parallel>
+        <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
+        <parallel>
+            <daemons>
+                <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
+            </daemons>
+            <sequential>
+                <ant antfile="${uitest.dir}/vaadin-server.xml" target="wait-for-startup" />
+                <ant antfile="${uitest.dir}/test.xml" target="tb2-tests" />
+            </sequential>
+        </parallel>
     </target>
 
     <target name="test-tb3" depends="clean-testbench-errors">
-       <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
-       <parallel>
-         <daemons>
-           <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
-         </daemons>
-         <sequential>
-           <ant antfile="${uitest.dir}/vaadin-server.xml" target="wait-for-startup" />
-           <ant antfile="${uitest.dir}/tb3test.xml" target="run-all-tb3-tests" inheritall="true" />
-         </sequential>
-       </parallel>
+        <property name="war.file" location="${vaadin.basedir}/result/artifacts/${vaadin.version}/vaadin-uitest/vaadin-uitest-${vaadin.version}.war" />
+        <parallel>
+            <daemons>
+                <ant antfile="${uitest.dir}/vaadin-server.xml" inheritall="true" inheritrefs="true" target="deploy-and-start" />
+            </daemons>
+            <sequential>
+                <ant antfile="${uitest.dir}/vaadin-server.xml" target="wait-for-startup" />
+                <ant antfile="${uitest.dir}/tb3test.xml" target="run-all-tb3-tests" inheritall="true" />
+            </sequential>
+        </parallel>
     </target>
 
     <target name="clean-testbench-errors">
@@ -240,5 +244,72 @@
             </fileset>
         </delete>
     </target>
+
+    <target name="compile-test-themes">
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-dark" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-metro" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-flat" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-flatdark" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-facebook" />
+        </antcall>
+        <antcall target="compile-theme">
+            <param name="theme" value="tests-valo-blueprint" />
+        </antcall>
+
+    </target>
+    <target name="compile-theme" depends="copy-theme">
+        <fail unless="theme" message="You must give the theme name to compile in the 'theme' parameter" />
+
+        <ivy:resolve log="download-only" resolveid="common" conf="compile-theme" />
+        <ivy:cachepath pathid="classpath.compile.theme" conf="compile-theme" />
+        <ivy:cachepath pathid="classpath.runtime.theme" conf="build" />
+
+        <echo>Compiling ${theme}</echo>
+        <mkdir dir="${theme.result.dir}" />
+
+        <!-- compile the theme -->
+        <java classname="com.vaadin.buildhelpers.CompileTheme" classpathref="classpath.compile.theme" failonerror="yes" fork="yes" maxmemory="512m">
+            <arg value="--theme" />
+            <arg value="${theme}" />
+            <arg value="--theme-folder" />
+            <arg value="${theme.result.dir}" />
+            <arg value="--version" />
+            <arg value="${vaadin.version}" />
+            <jvmarg value="-Xss8M" />
+            <jvmarg value="-XX:MaxPermSize=256M" />
+            <jvmarg value="-Djava.awt.headless=true" />
+        </java>
+
+    </target>
+
+    <target name="copy-theme">
+        <fail unless="theme" message="You must give the theme name to copy n the 'theme' parameter" />
+        <property name="theme.source.dir" location="../WebContent/VAADIN/themes" />
+
+        <copy todir="${theme.result.dir}">
+            <fileset dir="${theme.source.dir}">
+                <include name="${theme}/**/*.scss" />
+            </fileset>
+            <filterset refid="filter-vaadin.version" />
+        </copy>
+        <copy todir="${theme.result.dir}">
+            <fileset dir="${theme.source.dir}">
+                <exclude name="${theme}/**/*.scss" />
+            </fileset>
+        </copy>
+    </target>
+
 
 </project>
